Mask on mesh with multires modifier looks strange, behave broken #109112

Closed
opened 2023-06-18 21:06:44 +02:00 by Ilja Razinkov · 4 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1, type: release

Caused by 8b5c2d9ef1

Short description of error
Shift-A for making mask in Sculpt mode always give strange results, look at screenshots and attached file.

Exact steps for others to reproduce the error

  1. Open attached blend.
  2. Click on mesh, enter Sculpt mode.
  3. Press Shift-A, add a mask. You will see trinangles across the mask.
    When confirmed, such mask work with irregularities (not working as it should)
**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3, type: release Caused by 8b5c2d9ef109014ef64d8c170fd3e0554e8fef79 **Short description of error** Shift-A for making mask in Sculpt mode always give strange results, look at screenshots and attached file. **Exact steps for others to reproduce the error** 1. Open attached blend. 2. Click on mesh, enter Sculpt mode. 3. Press Shift-A, add a mask. You will see trinangles across the mask. When confirmed, such mask work with irregularities (not working as it should)
Ilja Razinkov added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-18 21:06:45 +02:00
Iliya Katushenock added the
Interest
Modeling
Interest
Modifiers
labels 2023-06-18 21:11:09 +02:00
Author

The same happens in latest 3.6.0 beta and 4.0.0 alpha (just downloaded and checked for the sake of completeness)

The same happens in latest 3.6.0 beta and 4.0.0 alpha (just downloaded and checked for the sake of completeness)
Member

Thanks for the report. I can confirm.

Thanks for the report. I can confirm.
Pratik Borhade added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-19 05:23:14 +02:00
Member

Broke between 83f9218801 - c1beaea80f
@lichtwerk , can you check?

Broke between 83f9218801d4 - c1beaea80f97 @lichtwerk , can you check?
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-06-19 06:03:53 +02:00
Member

Caused by 8b5c2d9ef1

CC @JosephEagar

Caused by 8b5c2d9ef109014ef64d8c170fd3e0554e8fef79 CC @JosephEagar
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-21 11:21:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109112
No description provided.