Sculpt: Fix #109112: Connected island code broken for multires